[package]
name = "steam-backlog-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = "0.29.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_toml = "0.0.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-attributes = "0.1.31"
tracing-subscriber = "0.3.22"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
